--- a/about-us.htm
+++ b/about-us.htm
@@ -126,16 +126,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-vpn.htm" title="VPN设备 | 9月23日18.5M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN设备 | 9月23日18.5M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="VPN设备 | 9月26日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 9月26日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-2-vpn-free.htm" title="VPN设备 | 10月2日21.2M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月2日21.2M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-21-vpn-github.htm" title="VPN设备 | 10月21日21.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享">VPN设备 | 10月21日21.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-top-vpn-node.htm" title="VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-mianfei-vpn.htm" title="VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-vpn-github.htm" title="VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享">VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="VPN设备 | 9月30日20.1M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 9月30日20.1M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享">VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-vpn-proxy.htm" title="VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-top-vpn.htm" title="VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月11日21.6M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-27-free-node-subscribe-links.htm" title="VPN设备 | 10月27日21.6M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 10月27日21.6M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-11-free-vpn.htm" title="VPN设备 | 10月11日18M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月11日18M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-26-node-share-links.htm" title="VPN设备 | 10月26日21.2M/S|免费VPN/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 10月26日21.2M/S|免费VPN/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-free-node-subscribe-links.htm" title="VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-top-vpn-node.htm" title="VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-top-vpn-node.htm" title="VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-vpn-proxy.htm" title="VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -147,7 +147,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
