--- a/date/2025-09/page-3.htm
+++ b/date/2025-09/page-3.htm
@@ -182,16 +182,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-vpn-proxy.htm" title="VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="VPN设备 | 9月30日20.1M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 9月30日20.1M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-top-vpn-node.htm" title="VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-vpn-node.htm" title="VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-vpn-proxy.htm" title="VPN设备 | 10月23日21.6M/S|免费VPN/Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月23日21.6M/S|免费VPN/Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享">VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-free-node-subscribe-links.htm" title="VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-vpn-node.htm" title="VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-19-node-share-links.htm" title="VPN设备 | 10月19日20.3M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 10月19日20.3M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share-links.htm" title="VPN设备 | 9月14日20.5M/S|免费VPN/Clash节点/SSR/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月14日20.5M/S|免费VPN/Clash节点/SSR/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-node.htm" title="VPN设备 | 10月16日20.8M/S|免费VPN/Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月16日20.8M/S|免费VPN/Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-2-vpn-free.htm" title="VPN设备 | 10月2日21.2M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月2日21.2M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share-links.htm" title="VPN设备 | 10月20日21.5M/S|免费VPN/SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点免费节点订阅分享">VPN设备 | 10月20日21.5M/S|免费VPN/SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-vpn-node.htm" title="VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-vpn-proxy.htm" title="VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -203,7 +203,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
