--- a/date/2025-10/page-3.htm
+++ b/date/2025-10/page-3.htm
@@ -112,6 +112,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-8-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-8-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、欧洲、香港、新加坡、美国、韩国、日本等地区,最高速度可达20.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-7-node-share-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-7-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、日本、香港、加拿大、欧洲、韩国、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、美国、欧洲、韩国、加拿大、新加坡、香港等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-5-vpn-github.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-5-vpn-github.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、日本、美国、韩国、香港、新加坡、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-4-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-4-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、韩国、香港、欧洲、加拿大、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-3-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享" src="/uploads/20241222-1/253352ea5161b569846edfcc6423bfa1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-3-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、日本、加拿大、新加坡、美国、欧洲、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-02">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-10-2-vpn-free.htm" class="xcblog-blog-url">
@@ -153,15 +243,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-9-15-free-vpn-node.htm" title="VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash节点/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash节点/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-vpn-free.htm" title="VPN设备 | 9月29日20.7M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 9月29日20.7M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-node-share-links.htm" title="VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-mianfei-vpn.htm" title="VPN设备 | 10月22日18.1M/S|免费VPN/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点免费节点订阅分享">VPN设备 | 10月22日18.1M/S|免费VPN/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-vpn-node.htm" title="VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享">VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-17-vpn-free.htm" title="VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享">VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-share-vpn.htm" title="VPN设备 | 10月18日18M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 10月18日18M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-27-free-node-subscribe-links.htm" title="VPN设备 | 10月27日21.6M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 10月27日21.6M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-19-node-share-links.htm" title="VPN设备 | 10月19日20.3M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 10月19日20.3M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-top-vpn-node.htm" title="VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-mianfei-vpn.htm" title="VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-top-vpn-node.htm" title="VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share-links.htm" title="VPN设备 | 10月20日21.5M/S|免费VPN/SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点免费节点订阅分享">VPN设备 | 10月20日21.5M/S|免费VPN/SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -173,7 +263,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
